home page added

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,177 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap");
+:root {
+  --blue: #007bff;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #dc3545;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --green: #28a745;
+  --teal: #20c997;
+  --cyan: #17a2b8;
+  --white: #fff;
+  --gray: #6c757d;
+  --gray-dark: #343a40;
+  --primary: #007bff;
+  --secondary: #6c757d;
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #f8f9fa;
+  --dark: #343a40;
+  --breakpoint-xs: 0;
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  background-color: var(--white);
+}
+
+/* ----- HOME ----- */
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.home {
+  height: 100vh;
+}
+
+.home .header .navbar {
+  padding: 25px 16px;
+}
+
+.home .header .navbar .container {
+  margin-left: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.home .header .navbar .container .logo h1 {
+  font-weight: 600;
+  color: #959597;
+}
+
+.home .header .navbar .container .nav-items {
+  width: 48vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 15px;
+}
+
+.home .header .navbar .container .nav-items li {
+  width: 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.home .header .navbar .container .nav-items li a {
+  color: #343a40;
+}
+
+.home .banner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 9vh;
+}
+
+.home .banner .text-content {
+  margin-left: 10vw;
+  margin-right: 5vw;
+  text-align: left;
+}
+
+.home .banner .text-content h5 {
+  font-size: 18px;
+  font-weight: 600;
+  color: #007bff;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.home .banner .text-content h2 {
+  font-size: 40px;
+  color: #343a40;
+}
+
+.home .banner .text-content p {
+  margin-top: 20px;
+  color: #959597;
+}
+
+.home .banner .text-content .form {
+  padding-top: 20px;
+}
+
+.home .banner .text-content .form input, .home .banner .text-content .form button {
+  width: 300px;
+  height: 50px;
+  border: 0;
+  border-radius: 30px;
+  background-color: #F3F3F3;
+}
+
+.home .banner .text-content .form input {
+  padding: 0 100px 0 22px;
+  outline: none;
+  font-size: 15px;
+}
+
+.home .banner .text-content .form button {
+  width: 150px;
+  color: white;
+  background-color: #007bffe1;
+  font-size: 15px;
+  margin-left: -70px;
+}
+
+.home .banner .text-content .form button:hover {
+  cursor: pointer;
+}
+
+.home .banner .hero-img {
+  margin-right: 11vw;
+}
+
+.home .banner .hero-img img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* ----- FEATURES ----- */
+/*# sourceMappingURL=style.css.map */
