--- a/css/style.css
+++ b/css/style.css
@@ -174,4 +174,76 @@ a {
 }
 
 /* ----- FEATURES ----- */
+.features {
+  height: 100vh;
+  background-color: #F3F3F3;
+  padding-top: 30px;
+}
+
+.features .container {
+  text-align: center;
+}
+
+.features .container .features-title {
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+.features .container .features-subtitle {
+  font-size: 15px;
+  color: #959597;
+  margin: 0 30vw;
+}
+
+.features .container .grid-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto auto auto;
+      grid-template-columns: auto auto auto;
+  -webkit-column-gap: 80px;
+          column-gap: 80px;
+  row-gap: 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: -10px;
+}
+
+.features .container .grid-container .grid-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: white;
+  width: 270px;
+  height: 290px;
+  border-radius: 10px;
+  padding-bottom: 20px;
+  padding: 0 25px;
+}
+
+.features .container .grid-container .grid-item h3 {
+  margin-bottom: 5px;
+  font-size: 25px;
+  font-weight: 600;
+  color: #3a3a47;
+}
+
+.features .container .grid-container .grid-item p {
+  font-size: 14px;
+  margin-bottom: 20px;
+  color: #959597;
+  letter-spacing: 0.5px;
+}
+
+.features .container .grid-container .grid-item img {
+  margin: 40px 0 25px;
+  width: 80px;
+}
 /*# sourceMappingURL=style.css.map */
