--- a/css/style.scss
+++ b/css/style.scss
@@ -168,4 +168,63 @@ a{
 
 /* ----- FEATURES ----- */
 
+.features{
+    height: 100vh;
+    background-color: #F3F3F3;
+    padding-top: 30px;
 
+    .container{
+        text-align: center;
+        .features-title{
+            font-size: 30px;
+            margin-bottom: 10px;
+        }
+
+        .features-subtitle{
+            font-size: 15px;
+            color: #959597;
+            margin: 0 30vw;
+
+        }
+
+        .grid-container{
+            display: grid;
+            grid-template-columns: auto auto auto;
+            column-gap: 80px;
+            row-gap: 30px;
+            justify-content: center;
+            margin-top: -10px;
+
+            .grid-item{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                background-color: white;
+                width: 270px;
+                height: 290px;
+                border-radius: 10px;
+                padding-bottom: 20px;
+                padding: 0 25px;
+
+                h3{
+                    margin-bottom: 5px;
+                    font-size: 25px;
+                    font-weight: 600;
+                    color: #3a3a47;
+                }
+
+                p{
+                    font-size: 14px;
+                    margin-bottom: 20px;
+                    color: #959597;
+                    letter-spacing: 0.5px;
+                }
+
+                img{
+                    margin: 40px 0 25px;
+                    width: 80px;
+                }
+            }
+        }
+    }
+}
