--- a/css/style.css
+++ b/css/style.css
@@ -377,4 +377,59 @@ a {
   height: inherit;
   width: 48.9vw;
 }
+
+/* ----- Results ----- */
+.results {
+  height: 60vh;
+  text-align: center;
+}
+
+.results span {
+  color: #007bff;
+  margin-bottom: 15px;
+}
+
+.results h6 {
+  font-size: 40px;
+  color: #3a3a47;
+  padding: 0 20vw;
+  margin-bottom: 20px;
+}
+
+.results .grid-results {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.results .grid-results .item-result {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 200px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.results .grid-results .item-result img {
+  width: 100px;
+}
+
+.results .grid-results .item-result span {
+  font-size: 25px;
+  font-weight: 600;
+  color: #3a3a47;
+}
+
+.results .grid-results .item-result p {
+  color: #959597;
+}
 /*# sourceMappingURL=style.css.map */
