--- a/css/style.scss
+++ b/css/style.scss
@@ -344,3 +344,49 @@ a{
     }
 }
 
+/* ----- Results ----- */
+
+.results{
+    height: 60vh;
+    text-align: center;
+
+    span{
+        color: #007bff;
+        margin-bottom: 15px;
+    }
+
+    h6{
+        font-size: 40px;
+        color: #3a3a47;
+        padding: 0 20vw;
+        margin-bottom: 20px;
+    }
+
+    .grid-results{
+        display: flex;
+        justify-content: center;
+
+
+        .item-result{
+            display: flex;
+            flex-direction: column;
+            width: 200px;
+            align-items: center;
+            img{
+                width: 100px;
+            }
+
+            span{
+                font-size: 25px;
+                font-weight: 600;
+                color: #3a3a47;
+            }
+
+            p{
+                color: #959597;
+            }
+        }
+    }
+
+}
+
