--- a/css/style.scss
+++ b/css/style.scss
@@ -344,7 +344,7 @@ a{
     }
 }
 
-/* ----- Results ----- */
+/* ----- RESULTS ----- */
 
 .results{
     height: 60vh;
@@ -355,7 +355,7 @@ a{
         margin-bottom: 15px;
     }
 
-    h6{
+    .page-title{
         font-size: 40px;
         color: #3a3a47;
         padding: 0 20vw;
@@ -390,3 +390,48 @@ a{
 
 }
 
+/* ----- REVIEWS ----- */
+
+.reviews{
+    height: 100vh;
+    text-align: center;
+    background-color: #f6f6fd;
+    padding-top: 30px;
+
+    .page-title{
+        font-size: 40px;
+        color: #3a3a47;
+        padding: 0 20vw;
+        margin-bottom: 10px;
+    }
+    
+    .sub-title{
+        padding: 0 20vw;
+        color: #959597;
+        margin-bottom: 50px;
+    }
+    
+    .review-container{
+        margin: 0 30vw;
+        padding: 60px;
+        background-color: white;
+        border-radius: 20px;
+        
+        p{
+            color: #3a3a47;
+            font-weight: 600;
+            margin-bottom: 50px;
+        }
+
+        img{
+            width: 80px;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
+
+        .stars{
+            font-size: 15px;
+            color: var(--yellow);
+        }
+    }
+}
